Fixed like_id and following_id null bug - PopularProfiles: added this section - Post: added comments link, image_filter information, removed h5 margin - Profile: just made it wrap for now - SignIn/ Up: added type="submit" to buttons - Layout: added px-0 to middle column - PostsPage: refreshing tokens separately before fetching Posts, set padding and size of columns - ProfilePage: refreshing the tokens separately before fetching data

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -4,7 +4,9 @@
   border-radius: 15px;
   margin-bottom: 10px;
 }
-.Post figure {
+
+.Post figure,
+h5 {
   margin: 0 0;
 }
 
